# typeman

./: .gitignore  Cargo.toml  README.md  TASK.md  default.nix  flake.nix  get_wiki.py  result  shell.nix
.lsp/.cache/: db.transit.json
assets/: common_eng_words.txt  common_ind_words.txt  featured_summaries.json  text.txt
src/: batch_size_selection.rs  button_states.rs  color_scheme.rs  config.rs  custom_colors.rs  game.rs  gui.rs  language.rs  leaderboard.rs  lib.rs  main.rs  modes.rs  practice.rs  settings.rs  text.txt  time_selection.rs  top_words_selection.rs  utils.rs  word_number_selection.rs
src/ui/: cli.rs  gui.rs
src/ui/cli/: main.rs  modes.rs
src/ui/gui/: config.rs  main.rs  popup.rs  practice.rs  results.rs
src/ui/tui/: app.rs  event.rs  mod.rs  popup.rs  ui.rs
tests/: integration_tests.rs
