[package]
name = "typing_test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
libc = "0.2.172"
macroquad = "0.4.14"
plotters = "0.3.7"
piston_window = "0.132.0"
plotters-piston = "0.3.0"
eframe = "0.31.1"
egui_plot = "0.32.1"
egui-macroquad = "0.17.3"
spacer = "0.3.9"
